* 0.11.0 (2020-05-XX)

  * (grid) add: .max(28)

* 0.10.0 (2020-04-15)

  * (type) add: .d[1-5]
  * (position) init: .position, .(left|right|top|bottom), .z([0-3]|9{1,4})
  * (grid) add: .min(8|10|12|14|16|18|20|24)
  * (grid) add: .max(34|35|38|42|44|51|52|54|55|78)
  * (grid) add: .max(w|h) { max-(width|height): 100% }
  * (grid) add: .xl-max
  * (border) add: .br[4-8]
  * (normalize) remove SVG fill

* 0.9.0 (2020-02-20)

  * rename: links to cursor
  * rename: borders to border
  * rename: colors to color
  * remove: depreciated styles
  * build with abrusco cli 0.5.0, add browserlist

* 0.8.2 (2019-12-21)

  * (grid) update: reorder paddings
  * (grid) add: .p[tblr](0|075)
  * (visibility) fix: opacity:0

* 0.8.1 (2019-12-07)

  * (type) update: code-font-family, lh2
  * (grid) add: max(15|65)

* 0.8.0 (2019-11-23)

  * (background) add: bg-topleft, bg-topright, bg-bottomleft, bg-bottomright, bg-repeatx, bg-repeaty, bg-norepeat
  * (background) depreciate: bg-tl, bg-tr, bg-bl, bg-br, bg-rx, bg-ry, bg-nr
  * (colors) add: color-inherit, color-inherit:hover, color-transparent
  * (variables) add: @custom-media --view-xl
  * (images) depreciate: image
  * (visibility) depreciate: invisible in favor of hidden
  * (visibility) depreciate: a0-100 in favor of o0-100
  * (visibility) move display: block, none to grid
  * (spacing) add: p[xy]?0125-1b, padding - border-width
  * (spacing) add: view-xl media query
  * (links) remove: all a- classes
  * (type) depreciate: st class in favor of lt
  * (type) add: ul:hover class
  * (type) responsive text-align
  * (grid) add: w[0a], h[0a], span[09]
  * (grid) responsive order[019]
  * (grid) grid class, grid(2-8) update

* 0.7.4 (2019-02-04)

  * (normalize) fix IE 100vh vertical height

* 0.7.3 (2019-01-03)

  * (borders) fix div color overwrite

* 0.7.2 (2018-10-10)

  * new variables: --serif-font-family, --sansserif-font-family
  * (type) added classes: serif, sansserif