@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  /* depreciated */
   min-height: 100vh;
   @media (--ie) {
     height: 100%;
